# localwebserver

./: README.md  pyproject.toml
.github/workflows/: package.yml
