[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covmatic-localwebserver"
authors = [
    { name="Marco Tiraboschi", email="marco.tiraboschi@unimi.it"},
]
maintainers = [
    { name="Marco Tiraboschi", email="marco.tiraboschi@unimi.it"},
    { name="Federico Insero", email="federico.insero@mail.polimi.it"},
    { name="Wassim Lababidi", email="wassim.lababidi@mail.polimi.it"},
]
description = "Package for the COVMATIC LocalWebServer"
readme = "README.md"
requires-python = ">=3.7, <3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
    'opentrons',
    'Flask',
    'configargparse',
    'cherrypy',
    'requests',
    'Pillow',
    'paramiko',
    'scp',
    'winshell',
    'Flask-Cors',
    'Flask-RESTful',
    'Flask-WTF'
]

[project-urls]
"Homepage" = "https://github.com/covmatic/localwebserver"

[tool.hatch.version]
path = "covmatic_lws/__init__.py"

[tool.hatch.build]
exclude = [
  "/.github",
  "/.idea",
]

# Copyright (c) 2020 Covmatic.
# Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
# The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
